--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "JSONStream": "^0.10.0",
     "async": "^0.2.10",
     "bigi": "^1.4.0",
-    "bignum": "^0.9.1",
     "bignum-browserify": "0.0.1",
     "crypto-js": "^3.1.2-5",
     "ecdsa": "^0.5.3",
+    "ecdsa-native": false,
     "ecurve": "^0.6.0",
     "eslint": "^0.8.2",
     "ethereum-tests": "0.0.1",
